--- a/css/style.css
+++ b/css/style.css
@@ -5170,7 +5170,69 @@ mark,
  /* endtab content1 kajol*/
 
 
+ /* table content kajol*/
+ .table-box
+{
+    margin: 50px auto;
+}
 
+.table-row{
+    display: table;
+    width: 100%;
+    margin: 15px auto;
+    background: transparent;
+    padding: px 0;
+    color: #555;
+    font-size: 15px;
+    box-shadow: 0 1px 0px 0px rgba(0,0,50,0.3);
+    
+}
+.table-head {
+    background: #0050d8;
+    box-shadow: none;
+    color: #fff;
+    font-weight: 600;
+   
+}
+
+.table-cell{
+    display: table-cell;
+    width: 20%;
+    text-align: center;
+    padding: 15px 0;
+    border-right: 1px solid #d6d4d4;
+    vertical-align: middle;
+}
+.first-cell{
+    text-align: left;
+    padding-left: 10px;
+}
+.last-cell{
+    border-right: none;
+}
+a{
+    text-decoration: none;
+    color: #555;
+}
+
+@media only screen and (max-width: 600px) {
+  .table-row {
+    font-size: 13px;
+  }
+}
+.table-row p{
+  margin: 5px;
+}
+.table-head .first-cell{
+  background-color: #f2f3fa;
+ 
+}
+.table-cell.last-cell{
+  border-right: 1px solid #d6d4d4;
+}
+.table-cell.first-cell{
+  border-right: 1px solid #d6d4d4;
+}
 
 
 
