--- a/css/style.css
+++ b/css/style.css
@@ -5121,53 +5121,7 @@ mark,
   background: #0050d8 !important;
 }
 
-/*tab content1 kajol*/
-.title{
-  font-family: sans-serif;
-  color: #dc2d5e;
-  text-align: center;
- 
-}
-.tabContainer{
-  width: 100%;
-  height: 650px;
 
-}
-.tabContainer .buttonContainer{
-  height: 15%;
-}
-.tabContainer .buttonContainer button{
-  width: 25%;
-  height: 60%;
-  float: left;
-  border: none;
-  outline:none;
-  cursor: pointer;
-  padding: 10px;
-  font-family: ;
-  font-size:18px ;
-  background-color: ;
- 
-}
-
-
-.active{
-  background-color: #0050d8;
-
-}
-
-
-.tabContainer .tabPanel{
-  height: 85%;
-  text-align: center;
-  padding-top: 10px;
-  box-sizing: border-box;
-  
-  display: none;
-  
-}
-
- /* endtab content1 kajol*/
 
 
  /* table content kajol*/
@@ -5233,6 +5187,80 @@ a{
 .table-cell.first-cell{
   border-right: 1px solid #d6d4d4;
 }
+/*pricing table kajol*/
 
+/* Style the tab */
+.tab {
+  overflow: hidden;
+  background-color: #f1f1f1;
+  margin: auto;
+  width: 30%;
+}
 
+/* Style the buttons inside the tab */
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 61px 14px 62px;
+  transition: 0.3s;
+  font-size: 17px;
+}
 
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #0050d8;
+  color: #fff;
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  
+}
+
+/* table create-2 */
+/* Style the tab */
+.data {
+  overflow: hidden;
+  background-color: #f1f1f1;
+  margin: auto;
+  width: 32%;
+}
+
+/* Style the buttons inside the tab */
+.data button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 61px 14px 62px;
+  transition: 0.3s;
+  font-size: 17px;
+}
+
+/* Change background color of buttons on hover */
+.data button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.data button.active {
+  background-color: #0050d8;
+  color: #fff;
+}
+
+/* Style the tab content */
+.datacontent {
+  display:none;
+  padding: 6px 12px;
+}
