images and menuber changes. also color changes

--- a/css/style.css
+++ b/css/style.css
@@ -5121,6 +5121,10 @@ mark,
   background: #03267F !important;
 }
 
+.progray {
+    color: #F2F3FA;
+}
+/* Arif Custom CSS end */
 
 
 
@@ -5265,3 +5269,5 @@ a{
   display:none;
   padding: 6px 12px;
 }
+
+ /* table content kajol end*/
