change hole site

--- a/css/style.css
+++ b/css/style.css
@@ -5271,3 +5271,10 @@ a{
 }
 
  /* table content kajol end*/
+ /*ssl image*/
+ .ssl-img{
+
+  padding-bottom: 35px; }  
+  .icon-check{
+    width: 20px;
+  }
